# demon

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  bench.Dockerfile  bench.csv  bench_harness.py  benchmarks.json  compose.yml  docker-entrypoint.sh  figs.py  micro_bench.json  plot.py  publish-docker.sh  repl.py  rubis_conflict_simulation.py  server_controller.py  test.Dockerfile  tpcc_client.Dockerfile
demon/: Cargo.toml
demon/src/: demon.rs  main.rs
demon/src/api/: http.rs  instrumentation.rs  mod.rs  query_parser.rs
demon/src/causal_replication/: mod.rs  snapshot.rs
demon/src/network/: mod.rs
demon/src/protocols/: causal.rs  demon.rs  deterministic_redblue.rs  gemini.rs  mod.rs  redblue.rs  redblue_modified.rs  strict.rs  strong.rs  unistore.rs
demon/src/rdts/: co_editor.rs  counters.rs  mod.rs  non_negative_counter.rs  or_set.rs  rubis.rs  rubis_rdt.rs  tpcc.rs
demon/src/sequencer/: mod.rs
demon/src/storage/: basic.rs  counters.rs  demon.rs  demon_old.rs  deterministic_redblue.rs  mod.rs  redblue.rs  unistore.rs
demon/src/weak_replication/: mod.rs  snapshot.rs
experiment_data/: non_neg_counter_latency.csv  plot.py
microbench/: Cargo.toml
microbench/src/: main.rs
src/: demon.rs  main.rs  weak_replication.rs
src/api/: http.rs  mod.rs  query_parser.rs
src/core/: event_handler.rs  mod.rs
src/gossip/: mod.rs
src/network/: mod.rs
src/sequencer/: mod.rs
src/storage/: counters.rs  mod.rs  snapshot.rs
src/weak_replication/: mod.rs
