[package]
name = "demon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1" # internal msg format
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
axum = "0.7"
async-trait = "0.1"
omnipaxos = { version = "0.2.2", features = ["serde", "batch_accept"] }
omnipaxos_storage = "0.2.2"
