[package]
name = "demon"
version = "0.1.16"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
axum = "0.7"
async-trait = "0.1"
omnipaxos = { version = "0.2.2", features = ["serde"] }
omnipaxos_storage = "0.2.2"
indexmap = "2"
cola = { git = "https://github.com/JonathanArns/cola", features = ["serde"] }
ropey = { version = "1.6.1" }
